welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Maths
	if ((Math.abs(n - 100) <= 10) || (Maths.abs(n-200) <= 10)) {
                                          ^